lll-site.css
/* ... */
#allpress_bg #resources_bg {
  background-image: url("Images/leroy-teaching.png");
  background-attachment: fixed;
  background-position: 105% 113%;
  background-size: 50%;
  margin: 3% 5%;
  background-repeat: no-repeat;
}

a, a:-webkit-any-link {
  text-decoration: none;
  color: var(--blue);
}

.mobile_image {
  height: 300px;
  width: auto;
  border-radius: 50%;
  place-self: center;
  border-bottom: 2px solid var(--gold);
}

.home_mobile_image {
  height: auto;
  width: 100%;
  place-self: center;
  border-radius: 50%;
  border-bottom: 2px solid var(--gold);
}

.prof_mobile_image {
  height: 300px;
  width: auto;
  border-radius: 50%;
  place-self: center;
  border-bottom: 2px solid var(--gold);
}

.book_link a:hover {
  color: var(--blue2);
  text-decoration: underline;
}

.overlay {
  height: 100%;
  width: 100%;
  display: none;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgb(0, 0, 0);
  background-color: rgb(0, 0, 0, 0.9);
}

.overlay_content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
}

.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 36px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.overlay a:hover, .overlay a:focus {
  color: #f1f1f1;
}

.overlay .closebtn {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
}

#dots {
  float: none;
}
span {
  float: right;
}

@media screen and (max-height: 450px) {
  .overlay a {font-size: 20px}
  .overlay .closebtn {
    font-size: 40px;
    top: 15px;
    right: 35px;
  }
}

.container {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr 1fr auto;
  grid-template-rows: 200px 1fr auto 50px;
  grid-template-areas:
    "name     name    name"
    "bio      bio     image"
    "footer   footer  image"
    ".        .        ."
}

.item1 {
  grid-area: name;
  max-width: 500px;
}

#llc_bg .item1 h1 {
  display: none;
}

.item3 {
  grid-area: bio;
  max-width: 500px;
  font-size: 1.2em;
  font-family: serif;
  margin-top: 50px;
}

/* STYLING for LLC PAGE */

.llc_image {
  width: 400px;
  margin-left: -87px;
  margin-top: 78px;
}

#llc_bg .item3 {
  grid-area: bio;
  max-width: 500px;
  font-size: 1.2em;
  font-family: serif;
  margin-top: 150px;
}

#llc_bg h2 {
  margin-top: 0px;
  color: var(--gold);
  /*box-shadow: inset 0 -10px 0 0 var(--blue);*/
  width: max-content;
  padding-bottom: 30px;
}

#llc_bg .mobile_image {
  display:none;
}
/* END STYLING for LLC PAGE */

/* STYLING for EASE PAGE */
#ease .container {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: 200px 500px 1fr auto 50px;
  width: 100%;
  grid-gap: 0px;
  grid-template-areas:
    "name     name  "
    "header   header"
    "bio      bio"
    "footer   footer"
    ".        .     "
}

.hamburger {
  padding: 50px;
  position: absolute;
  left: calc(100% - 144px);
}

.header {
  grid-area: header;
  width: 100%;
  background-image: linear-gradient(180deg,rgba(150,105,97,0.67) 0%,rgba(0,2,43,0.46) 100%), url("Images/track.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  padding: 10%;
}

.header-text, .header-text h1 {
  color: var(--white);
  text-align: center;
}

.ease_image {
  width: 150px; 
  margin: 50px 0px 0px 50px;
}

#ease .item3 {
  grid-area: bio;
  max-width: 100%;
  font-size: 1.2em;
  font-family: sans-serif;
  margin-top: 50px;
  margin-left: 100px;
  margin-right: 100px;
}

.link-card{
  box-shadow: 0 4px 8px 0 var(--box), 0 6px 20px 0 rgba(0,0,0,0.19);
  margin: 30px 0 30px 0;
  overflow: hidden;
}

.link-card-ease { 
  box-shadow: 0 4px 8px 0 var(--box), 0 6px 20px 0 rgba(0,0,0,0.19);
  margin: 30px 0 30px 0;
  overflow: hidden;
}

.link-card-ease img {
  height: 100%;
  width: 25%;
  border-radius: 0%;
  float: left;
  margin-right: 50px;
  min-height: 260px;
}

.link-card-ease a {
  text-decoration: none;
}

.link-card-ease p {
    font-size: 30px;
    color: var(--blue);
    padding-right: 10px;
    margin-right: 10px;
}

.link-card-ease ul {
 list-style-type: none;
 font-size: 14px;
}

.link-card-ease ul li {
  margin-bottom: 10px;
  max-width: 90%;
 }

button {
  padding: 12px;
  color: white;
  background-color: var(--blue);
  border-radius: 7px;
  text-align: center;
  font-size: 14px;
  cursor: pointer;
}

.text h1 {
  font-size: 4em;
  color: var(--white);
  margin-bottom: 10px;
  margin-top: 0px;
}
  /* TEST for MOBILE CARDS */
.card-ease-mobile {
  position: relative;
  width: 50%;
  float: left;
  padding: 5px;
}

.ease-image-mobile {
  display: block;
  width: 100%;
  height: auto;
}

.card-wrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 20px;
}

.card-ease-mobile-test {
  box-shadow: 0 4px 8px 0 var(--box), 0 6px 20px 0 rgba(0,0,0,0.19);;
  max-width: 300px;
  margin: auto;
  text-align: center;
  margin-bottom: 25px;
  float: left;
  display: grid;
}

.card-ease-mobile-top {
  box-shadow: 0 4px 8px 0 var(--box), 0 6px 20px 0 rgba(0,0,0,0.19);;
  max-width: 300px;
  margin: auto;
  text-align: center;
  margin-bottom: 25px;
  float: left;
  display: none;
}

.title {
  color: sans-serif;
  font-size: 18px;
  color: var(--blue);
}

.card-ease-mobile-test .fas, .card-ease-mobile-top .fas {
  text-decoration: none;
  font-size: 22px;
  color: var(--red);
  margin: 20px;
}

.card-ease-mobile-test ul, .card-ease-mobile-top ul {
  text-decoration: none;
  font-size: 12px;
  list-style-type: none;
}

.card-ease-mobile-test ul li, .card-ease-mobile-top ul li, .research-list li {
  margin-bottom: 10px;
  max-width: 90%;
 }

 .research {
   padding: 0px 20px 0px 20px;
 }

 .research div {
  margin-bottom: 50px;
 }

 .research-title {
   color: var(--red);
 }

 .research-list {
  font-size: 0.8em;
 }

 #ease .footer {
   margin-left: 100px;
   margin-right: 100px;
   border-top: dotted;
 }
/* ... */

